--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "build": "craco build",
     "start": "electron ."
   },
