--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "react-scripts start",
     "build": "craco build",
     "start": "electron .",
-    "package": "electron-forge package"
+    "package": "electron-forge package",
+    "publish": "electron-builder build -w --x64"
   },
   "eslintConfig": {
     "extends": [
@@ -45,11 +46,16 @@
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
     "electron": "^23.1.3",
+    "electron-builder": "^23.6.0",
     "webpack-node-externals": "^3.0.0"
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "build": {
+          "asar": true
+        }
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
